更新 3.11 版 (非最終)

--- a/game.html
+++ b/game.html
@@ -21,9 +21,6 @@
     <meta property="og:image" content="https://gashpo.github.io/zkaizoku/img/og-image.png" />
     <link rel=”apple-touch-icon” href=”img/apple-touch-icon.png”>
 
-    <!-- Swiper 套件 -->
-    <link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css" />
-
     <!-- Custom Icons -->
     <link rel="stylesheet" href="vendor/icomoon/style.css">
 
@@ -142,14 +139,14 @@
                     <h3>Game</h3>
                     <ul class="game-list">
                         <li>
-                            <a href="guess-the-number.html">
+                            <a href="match-the-pirate.html">
                                 <div class="img">
-                                    <img src="img/game/guess-the-number/thumb.jpg">
+                                    <img src="img/game/match-the-pirate/thumb.jpg">
                                 </div>
-                                <h4>Guess the Number</h4>
+                                <h4>Match the Pirate</h4>
                                 <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
+                                    <li>Role</li>
+                                    <li>Card</li>
                                     <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
@@ -162,8 +159,8 @@
                                 </div>
                                 <h4>Paper, Scissors, Stone</h4>
                                 <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>paper-scissors-stone</li>
+                                    <li>Fantasy</li>
+                                    <li>Relaxing</li>
                                     <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
