--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
 						<div class="carousel dark">
 							<div class="swiper">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide" onclick="location='guess-the-number.html'">
-										<img src="img/game/guess-the-number/thumb.jpg">
+									<div class="swiper-slide" onclick="location='match-the-pirate.html'">
+										<img src="img/game/match-the-pirate/thumb.jpg">
 										<div class="hover">
-											<h4>Guess the Number</h4>
+											<h4>Match the Pirate</h4>
 											<ul class="tags">
-												<li>fortune</li>
-												<li>dice</li>
+												<li>Role</li>
+												<li>Card</li>
 												<li>&lt; 3 minutes</li>
 											</ul>
 											<button class="btn-tertiary">View Details</button>
@@ -210,8 +210,8 @@
 										<div class="hover">
 											<h4>Paper, Scissors, Stone</h4>
 											<ul class="tags">
-												<li>fortune</li>
-												<li>paper-scissors-stone</li>
+												<li>Fantasy</li>
+												<li>Relaxing</li>
 												<li>&lt; 3 minutes</li>
 											</ul>
 											<button class="btn-tertiary">Coming Soon</button>
@@ -536,7 +536,7 @@
 			<div id="mission" class="popUp">
 				<div class="popUp--container">
 					<button class="popUp--close"><i class="icon-Close"></i></button>
-					<h3>領取成功</h3>
+					<h3>簽到成功，$ZKZ領取完成!</h3>
 					<div class="popUp--content">
 						<p class="text-center">24小時後可以再次領取</p>
 					</div>
