--- a/game.html
+++ b/game.html
@@ -163,7 +163,7 @@
                                     <li>Relaxing</li>
                                     <li>&lt; 3 minutes</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
                             </a>
                         </li>
                         <li>
@@ -177,10 +177,24 @@
                                     <li>slot machine</li>
                                     <li>&lt; 3 minutes</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
                             </a>
                         </li>
                         <li>
+                            <a href="javascript:void(0)">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Mysterious Compass</h4>
+                                <ul class="tags">
+                                    <li>Pirate</li>
+                                    <li>Destiny</li>
+                                    <li>&lt; 3 minutes</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                            </a>
+                        </li>
+                        <!-- <li>
                             <a href="bet-big-small.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
@@ -251,20 +265,6 @@
                             </a>
                         </li>
                         <li>
-                            <a href="super-fruit-roulette.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Super Fruit Roulette</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>roulette</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
                             <a href="spin-the-wheel.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
@@ -277,7 +277,7 @@
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
