--- a/index.html
+++ b/index.html
@@ -229,7 +229,19 @@
 											<button class="btn-tertiary">Coming Soon</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='bet-big-small.html'">
+									<div class="swiper-slide" onclick="location='mysterious-compass.html'">
+										<img src="img/game/mysterious-compass/thumb.jpg">
+										<div class="hover">
+											<h4>Mysterious Compass</h4>
+											<ul class="tags">
+												<li>Pirate</li>
+												<li>Destiny</li>
+												<li>&lt; 3 minutes</li>
+											</ul>
+											<button class="btn-tertiary">Coming Soon</button>
+										</div>
+									</div>
+									<!-- <div class="swiper-slide" onclick="location='bet-big-small.html'">
 										<img src="img/game/bet-big-small/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
@@ -289,18 +301,6 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='super-fruit-roulette.html'">
-										<img src="img/game/super-fruit-roulette/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
 									<div class="swiper-slide" onclick="location='spin-the-wheel.html'">
 										<img src="img/game/spin-the-wheel/thumb.jpg">
 										<div class="hover">
@@ -312,7 +312,7 @@
 											</ul>
 											<button class="btn-tertiary">View Details</button>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="swiper-button-prev"></div>
@@ -486,11 +486,12 @@
 						<img src="img/PieChart.png">
 					</div>
 				</section>
+
+				<img class="popUp--open" for="mission" src="img/daily-mission.png">
 			</main>
 
 			<footer>
 				<div class="mask"></div>
-				<img class="popUp--open" for="mission" src="img/daily-mission.png">
 				<!-- <ul class="sns">
 					<li>
 						<button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
