--- a/personal.html
+++ b/personal.html
@@ -258,7 +258,7 @@
                             <div class="title">
                                 <h3>
                                     我的$ZKZ
-                                    <i class="icon-InfoCircle popUp--open" for="info"></i>
+                                    <!-- <i class="icon-InfoCircle popUp--open" for="info"></i> -->
                                 </h3>
                                 <button class="btn-tertiary btn-s">加入$ZKZ</button>
                             </div>
