--- a/game.html
+++ b/game.html
@@ -65,7 +65,6 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
@@ -139,45 +138,45 @@
                     <h3>Game</h3>
                     <ul class="game-list">
                         <li>
-                            <a href="match-the-pirate.html">
+                            <a href="MTP.html">
                                 <div class="img">
-                                    <img src="img/game/match-the-pirate/thumb.jpg">
+                                    <img src="img/game/MTP/thumb.jpg">
                                 </div>
-                                <h4>Match the Pirate</h4>
+                                <h4>默契海盜</h4>
                                 <ul class="tags">
-                                    <li>Role</li>
-                                    <li>Card</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>角色</li>
+                                    <li>卡牌</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="paper-scissors-stone.html">
+                            <a href="javascript:void(0)">
                                 <div class="img">
-                                    <img src="img/game/paper-scissors-stone/thumb.jpg">
+                                    <img src="img/game/PSS/thumb.jpg">
                                 </div>
-                                <h4>Paper, Scissors, Stone</h4>
+                                <h4>剪刀石頭布</h4>
                                 <ul class="tags">
-                                    <li>Fantasy</li>
-                                    <li>Relaxing</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>科幻</li>
+                                    <li>休閒</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="interstellar-connection.html">
+                            <a href="javascript:void(0)">
                                 <div class="img">
-                                    <img src="img/game/interstellar-connection/thumb.jpg">
+                                    <img src="img/game/IC/thumb.jpg">
                                 </div>
-                                <h4>Interstellar Connection</h4>
+                                <h4>星際連線</h4>
                                 <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>slot machine</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>科幻</li>
+                                    <li>休閒</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
                             </a>
                         </li>
                         <li>
@@ -185,13 +184,13 @@
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
                                 </div>
-                                <h4>Mysterious Compass</h4>
+                                <h4>神秘輪盤</h4>
                                 <ul class="tags">
-                                    <li>Pirate</li>
-                                    <li>Destiny</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>海盜</li>
+                                    <li>命運</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
                             </a>
                         </li>
                         <!-- <li>
